--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
         var style = {
-            font : 'bold italic 15px Arial',
+            font : '15px Arial',
             fill : '#ffffff'
         };
 
@@ -48,7 +48,7 @@
         sprite_grey.scale.x = sprite_grey.scale.y = game_ratio;
 
 
-        var sprite_text = new PIXI.Text("进入游戏后,玩家将给定2秒钟时间记忆卡牌,倒计\n\n时结束后所有卡牌翻回反面.在15s内成对翻开所有\n\n卡牌即可通关,若在规定时间内未全部成对翻开或\n\n者翻到炸弹,则游戏失败.", style);
+        var sprite_text = new PIXI.Text("进入游戏后,玩家将给定3秒钟时间记忆卡牌,倒计\n时结束后所有卡牌翻回反面.在15s内成对翻开所有\n卡牌即可通关,若在规定时间内未全部成对翻开或\n者翻到炸弹,则游戏失败.", style);
         sprite_text.scale.x = sprite_text.scale.y = game_ratio;
         sprite_text.position.x = game_width * 0.091;
         sprite_text.position.y = game_height * 0.33;
