--- a/start.html
+++ b/start.html
@@ -9,8 +9,8 @@
 
 <body>
     <script>
-        var window_width = document.documentElement.scrollWidth;
-        var window_height = document.documentElement.scrollHeight;
+        var window_width = document.documentElement.offsetWidth;
+        var window_height = document.documentElement.offsetHeight;
         var game_height = window_height;
         var fail = false;
         var success = false;
@@ -20,7 +20,7 @@
         var game_width = Math.floor(window_height/1.778);
         if (game_width > window_width) {
             game_width = window_width;
-            ganke_height = game_width * 1.778;
+            game_height = game_width * 1.778;
         }
         var stage = new PIXI.Container();
 
