--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <script src= "http://static.api.5miao.com/js/api.js" ></script>
 </head>
 
+<style>
+    canvas{display:block;margin:0 auto;}
+</style>
+
 <body>
 <script>
     var window_width = document.documentElement.offsetWidth;
