--- a/start.html
+++ b/start.html
@@ -6,6 +6,9 @@
     <script src="pixi.js"></script>
     <script src= "http://static.api.5miao.com/js/api.js" ></script>
 </head>
+<style>
+    canvas{display:block;margin:0 auto;}
+</style>
 
 <body>
     <script>
