修正浏览器高度获取

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 <script>
-    var window_width = document.documentElement.offsetWidth;
-    var window_height = document.documentElement.offsetHeight;
+    var window_width = document.documentElement.clientWidth;
+    var window_height = document.documentElement.clientHeight;
     var game_height = window_height;
     var game_width = Math.floor(window_height/1.778);
     if (game_width > window_width) {
