--- a/start.html
+++ b/start.html
@@ -12,8 +12,8 @@
 
 <body>
     <script>
-        var window_width = document.documentElement.offsetWidth;
-        var window_height = document.documentElement.offsetHeight;
+        var window_width = document.documentElement.clientWidth;
+        var window_height = document.documentElement.clientHeight;
         var game_height = window_height;
         var fail = false;
         var success = false;
